--- a/app/views/static_pages/menu.html.erb
+++ b/app/views/static_pages/menu.html.erb
@@ -10,57 +10,57 @@
 	  <ul class="list-2s">
 	    <li>
 		  <div class="span6 menu-row">
-		  <span class="num">1.</span><span class="fdname">Grilled Pork $8.50</span><br>
+		  <span class="num">1.</span><span class="fdname">Grilled Pork - $8.50</span><br>
 		  cubed pork loin grilled over lava rocks &amp; basted w/*paseo marinade until golden brown
 		  </div>
 		  <div class="span6 menu-row">
-		  <span class="num">2.</span><span class="fdname">Caribbean Roast $8.50</span><br>
+		  <span class="num">2.</span><span class="fdname">Caribbean Roast - $8.50</span><br>
 		  pork shoulder coated in *paseo marinade &amp; slow roasted 'til falling into succulent morsels
 		  </div>
 		</li>	
 		<li>
 		  <div class="span6 menu-row">
-		   <span class="num">3.</span><span class="fdname">Chicken Breast $8.50</span><br>
+		   <span class="num">3.</span><span class="fdname">Chicken Breast - $8.50</span><br>
            plump chicken breast dredged in paseo marinade &amp; fire grilled to perfection
 		  </div>
 		  <div class="span6 menu-row">
-			<span class="num">4.</span><span class="fdname">Smokin' Thighs $8.50</span><br>
+			<span class="num">4.</span><span class="fdname">Smokin' Thighs - $8.50</span><br>
 			2 marinated, skin-on, boneless chicken thighs flash grilled &amp; oven roasted
 		  </div>	
 		</li>
 		<li>
 		  <div class="span6 menu-row">
-			<span class="num">5.</span><span class="fdname">Sauteed Prawns $8.95</span><br>
+			<span class="num">5.</span><span class="fdname">Sauteed Prawns - $8.95</span><br>
 			6 black tiger prawns sauteed in extra virgin olive oil w/ our garlic tapenade (optional spice 1-5 stars)
 		  </div>
 		  <div class="span6 menu-row">
-          <span class="num">6.</span><span class="fdname">Fish of the Day $8.95</span><br>
+          <span class="num">6.</span><span class="fdname">Fish of the Day - $8.95</span><br>
 	        delectable slices of fish, pan seared thoroughly w/ extra virgin olive oil &amp; garlic tapenade (optional spice 1-5 stars)
 		  </div>	
 		</li>
 		<li>
 		  <div class="span6 menu-row">
-		  	<span class="num">7.</span><span class="fdname">Tofu Delight $8.50</span><br>
+		  	<span class="num">7.</span><span class="fdname">Tofu Delight - $8.50</span><br>
 	        where's the meat!? who cares, extra firm organic tofu cut into bite size pieces &amp; sauteed in extra virgin olive oil w/ our garlic tapenade (optional spice 1-5 stars) 
 		  </div>
 		  <div class="span6 menu-row">
-		  	<span class="num">8.</span><span class="fdname">Paseo Press $8.95</span><br>
+		  	<span class="num">8.</span><span class="fdname">Paseo Press - $8.95</span><br>
 	        succulent morsels of roasted pork nestled atop banana peppers draped w/ sheer slices of smoked ham, swiss cheese, caramelized onions all melted together between a hot press (no lettauce or jalapenos) 
 		  </div>	
 		</li>
 		<li>
 		  <div class="span6 menu-row">
-		    <span class="num">9.</span><span class="fdname">Ham and Cheese $7.50</span><br>
+		    <span class="num">9.</span><span class="fdname">Ham and Cheese - $7.50</span><br>
 	        our twist on a classic. Razor thin slices of smoke cured ham, piled high over banana peppers, covered w/ caramelized onions &amp; swiss cheese, melted together on a hot press (no lettauce or jalapenos)
 		  	</div>
 		  <div class="span6 menu-row">
-        <span class="num">10.</span><span class="fdname">Onion Obsession $6.00</span><br>
+        <span class="num">10.</span><span class="fdname">Onion Obsession - $6.00</span><br>
 	        caramelized onions sauteed in our garlic tapenade tossed with fresh sprigs of cilantro and jalapeno peppers (optional spice 1-5 stars)
 		  </div>	
 		</li>
 		<li>
 		  <div class="span6 menu-row">
-		  	<span class="num">11.</span><span class="fdname">Seared Scallops $8.95</span><br>
+		  	<span class="num">11.</span><span class="fdname">Seared Scallops - $8.95</span><br>
 	        sizeable sea scallops pan seared in extra virgin olive oil, our garlic tapenade and tossed w/ fresh sprigs of cilantro (optional spice 1-5 stars)
 		  </div>
 		</li>
@@ -70,28 +70,28 @@
 	  <ul class="list-2s">	
 		<li>
 		  <div class="span6 menu-row">
-		  	<span class="num">12.</span><span class="fdname">West Caribbean Bowl $12.00</span><br>
+		  	<span class="num">12.</span><span class="fdname">West Caribbean Bowl - $12.00</span><br>
 	        dis one be the second most popular "bowl" in the caribbean mon! a generous portion of jasmine rice smothered in black beans, warm salsa, shredded cheddar cheese, sour cream, jalapenos &amp; 1 chicken thigh. served w/ love, peace, and tortilla chips
 		  </div>
 		  <div class="span6 menu-row">
-		  	<span class="num">13.</span><span class="fdname">Rice Bean Thigh Trio $8.00</span><br>
+		  	<span class="num">13.</span><span class="fdname">Rice Bean Thigh Trio - $8.00</span><br>
 	        two scoops of jasmine rice covered in black beans &amp; accompanied w/ an oven roasted thigh *extra thigh $2.00
 		  </div>	
 		</li>
 		<li>
 		  <div class="span6 menu-row">
-		  	<span class="num">14.</span><span class="fdname">Paseo Greens $4.75</span><br>
+		  	<span class="num">14.</span><span class="fdname">Paseo Greens - $4.75</span><br>
 	        crisp romaine lettauce, razor thin sliced purple cabbage, julienne pickled beets, fresh sprigs of cilantro, drizzled w/ our house vinaigrette &amp; extra virgin oil *add grilled chicken breast--$3.00 *add sauteed prawns, scallops or fish--$4.00
 	        *roasted thigh &amp; caribbean roast--$2.00
 		  </div>
 		  <div class="span6 menu-row">
-		  	<span class="num">15.</span><span class="fdname">Black Beans &amp; Rice $5.50</span><br>
+		  	<span class="num">15.</span><span class="fdname">Black Beans &amp; Rice - $5.50</span><br>
 	        a bowl full of fluffy jasmine rice smothered in our critically acclaimed vegetarian black beans
 		  </div>	
 		</li>
 	    <li>
 		  <div class="span6 menu-row">
-		  	<span class="num">16.</span><span class="fdname">Rice Bean Salad $8.25</span><br>
+		  	<span class="num">16.</span><span class="fdname">Rice Bean Salad - $8.25</span><br>
 	        paseo greens served with jasmine rice &amp; a healthy portion of black beans
 		  </div>
 		</li>
@@ -105,47 +105,47 @@
 		<ul class="list-2s">
 			<li>
 		  	<div class="span6 menu-row">
-		  		<span class="num">17.</span><span class="fdname">1/2 Chicken Dinner $12.50</span><br>
+		  		<span class="num">17.</span><span class="fdname">1/2 Chicken Dinner - $12.50</span><br>
 					by far the best deal on the island for quality &amp; quantity. a huge 1/2 chicken encrusted w/ exotic spiced, flash grilled sealing all the juiced, finished off in the oven &amp; then by you.
 		  	</div>
 		  	<div class="span6 menu-row">
-					<span class="num">18.</span><span class="fdname">Caribbean Roast Dinner $12.50</span><br>
+					<span class="num">18.</span><span class="fdname">Caribbean Roast Dinner - $12.50</span><br>
 					hefty morsels of succulent roasted pork shoulder dripping in *paseo parinade waiting to tantalize al 9000 of your taste buds
 		  	</div>	
 		  </li>
   		<li>
 		  	<div class="span6 menu-row">
-					<span class="num">19.</span><span class="fdname">Smokin' Thighs Dinner $12.50</span><br>
+					<span class="num">19.</span><span class="fdname">Smokin' Thighs Dinner - $12.50</span><br>
 					2 bone-in juicy thighs bathed in *paseo marinade flash grilled giving 'em an enticing smokey savor then patiently roasted 'til flawless. can you hear the "thigh" of satisfaction?
 		  	</div>
 		  	<div class="span6 menu-row">
-					<span class="num">20.</span><span class="fdname">Grilled Chicken Breast $13.00</span><br>
+					<span class="num">20.</span><span class="fdname">Grilled Chicken Breast - $13.00</span><br>
 					6oz of boneless, skinless, all white goodness, grilled over lava rocks with a caramelized coating of *paseo marinade embracing all its' natural juices
 		  	</div>	
 		  </li>
 		  <li>
 		  	<div class="span6 menu-row">
-		  		<span class="num">21.</span><span class="fdname">Paseo Pork Loin $13.00</span><br>
+		  		<span class="num">21.</span><span class="fdname">Paseo Pork Loin - $13.00</span><br>
 					cubed pork loin grilled over an open flame, brushed with *paseo marinade &amp; greatness.
 		  	</div>
 		  	<div class="span6 menu-row">
-		  		<span class="num">22.</span><span class="fdname">Caribbean Scallops $13.00</span>
+		  		<span class="num">22.</span><span class="fdname">Caribbean Scallops - $13.00</span>
 					savory sea scallops pan seared in extra virgin olive oil, garlic tapenade &amp; gently tossed in our reveled red sauce. Available w/ cilantro (optional spice 1-5 stars)
 		  	</div>	
 		  </li>
 		  <li>
 		  	<div class="span6 menu-row">
-					<span class="num">23.</span><span class="fdname">Fish In Red Sauce $13.00</span><br>
+					<span class="num">23.</span><span class="fdname">Fish In Red Sauce - $13.00</span><br>
 					delicate slices of fish fillet sauteed in extra virgin olive oil, garlic tapenade &amp; swimming in our reveled red sauce. available w/ cilantro (optional spice 1-5 stars)
 		  	</div>
 		  	<div class="span6 menu-row">
-					<span class="num">24.</span><span class="fdname">Paseo Prawns $13.00</span><br>
+					<span class="num">24.</span><span class="fdname">Paseo Prawns - $13.00</span><br>
 					6 peeled &amp; deveined black tiget prawns, sauteed in extra virgin olive oil, garlic tapenade &amp; simmered in our vivrant red sauce. available w/ cilantro (optional spice 1-5 stars)
 		  	</div>	
 		  </li>
 		  <li>
 		  	<div class="span6 menu-row">
-					<span class="num">25.</span><span class="fdname">Tofu Con Gusto $12.50</span><br>
+					<span class="num">25.</span><span class="fdname">Tofu Con Gusto - $12.50</span><br>
 					stout slices of extra firm organic tofu, sauteed in extra virgin olive oil, garlic tapenade &amp; ladled w/ our reveled red sauce. available w/ cilantro (optional spice 1-5 stars)
 		  	</div>
 		  </li>
@@ -154,38 +154,30 @@
 		<span class="food-title">Sides</span>
 	</div>
 	<div class="span12 block">
-		<ul class="list-2s">
-			<li class="menu-row"><div> grilled chicken breast with rice $5.75</div></li><br>
-		  <li class="menu-row"><div>paseo pork loin with rice $5.75</div></li><br>
-			<li class="menu-row"> 2 chicken thighs w/ rice $5.25</li><br>
-			<li class="menu-row">1/2 chicken w/ rice $5.75	
-		  </li><br>
-		  <li class="menu-row">caribbean roast pork w/ rice $5.50</li><br>
-			<li class="menu-row">your choice of prawns, scallops or fish in red sauce over rice $6.25
-		  </li><br>
-  		<li class="menu-row">tofu in red sauce over rice $5.75</li><br>
-		  <li class="menu-row">12oz black beans $4.25
-		  </li>
-		</ul>
+			<div class="side">grilled chicken breast with rice $5.75</div>
+		  <div class="side">paseo pork loin with rice - $5.75</div>
+			<div class="side">2 chicken thighs w/ rice - $5.25</div>
+			<div class="side">1/2 chicken w/ rice - $5.75</div>	
+		  <div class="side">caribbean roast pork w/ rice - $5.50</div>
+			<div class="side">your choice of prawns, scallops or fish in red sauce over rice - $6.25</div>
+  		<div class="side">tofu in red sauce over rice - $5.75</div>
+		  <div class="side">12oz black beans - $4.25</div>
+			<div class="side">6oz black beans - $3.00</div>
+			<div class="side">12oz jasmine rice - $2.50</div>
+			<div class="side">6oz jasmine rice - $1.50</div>
+			<div class="side">caramelized onions - $1.00</div>
+			<div class="side">tortilla chips - $1.25</div>	
+			<div class="side">jalapenos - $0.50</div>	
+			<div class="side">can soda or water - $1.25</div>	
+			<div class="side">specialty soda - $1.00</div>	
 	</div>	
 </div>
 	
-
-
-
-
+	
 	
 	
 	
 	
 
 	
-	
-	6oz black beans $3.00
-	12oz jasmine rice $2.50
-	6oz jasmine rice $1.50
-	caramelized onions $1.00
-	tortilla chips $1.25
-	jalapenos $0.50
-	can soda -or- water $1.25
-	specialty soda $1.95 
+	 
