Menu draft, reporting to client

--- a/app/views/static_pages/menu.html.erb
+++ b/app/views/static_pages/menu.html.erb
@@ -4,64 +4,65 @@
 <div class="row-fluid">
 	<div class="menu-category span12">
 		<span class="food-title">Sandwiches</span><span class="description">
-	    <br><em>All sandwiches are on a lightly toasted baguette slathered with aoli, fresh cilantro, pickled jalapenos, crisp romaine &amp; caramelized onions.</em></span>
+	    <br><em>All sandwiches are served on a toasted baguette, slathered with our signature aoli, fresh cilantro, pickled jalapenos, romaine lettuce and caramelized onions. Add garlic corn for $1.00</em></span>
 	</div> 
 	<div class="span12 block">
 	  <ul class="list-2s">
-	    <li>
+	    <li id="fix3-4">
 		  <div class="span6 menu-row">
 		  <span class="num">1.</span><span class="fdname">Grilled Pork - $8.50</span><br>
-		  cubed pork loin grilled over lava rocks &amp; basted w/*paseo marinade until golden brown
+		  Cubed pork loin grilled on a flat top and basted with Paseo Marinade until golden brown.
 		  </div>
 		  <div class="span6 menu-row">
 		  <span class="num">2.</span><span class="fdname">Caribbean Roast - $8.50</span><br>
-		  pork shoulder coated in *paseo marinade &amp; slow roasted 'til falling into succulent morsels
+		  <span class="alt-id"><em>Most Popular - Formerly known as the Midnight Cuban.</em></span><br>
+		  Pork shoulder slow-roasted in Paseo Marinade until falling apart.
 		  </div>
 		</li>	
-		<li>
+		<li id="fix3-4">
 		  <div class="span6 menu-row">
 		   <span class="num">3.</span><span class="fdname">Chicken Breast - $8.50</span><br>
-           plump chicken breast dredged in paseo marinade &amp; fire grilled to perfection
+           Boneless, skinless chicken breast grilled on a flat top and basted with Paseo Marinade until golden brown.
 		  </div>
 		  <div class="span6 menu-row">
 			<span class="num">4.</span><span class="fdname">Smokin' Thighs - $8.50</span><br>
-			2 marinated, skin-on, boneless chicken thighs flash grilled &amp; oven roasted
+			Two marinated, de-boned, skin-on chicken thighs, flash grilled and oven roasted.
 		  </div>	
 		</li>
 		<li>
 		  <div class="span6 menu-row">
 			<span class="num">5.</span><span class="fdname">Sauteed Prawns - $8.95</span><br>
-			6 black tiger prawns sauteed in extra virgin olive oil w/ our garlic tapenade (optional spice 1-5 stars)
+			Tiger prawns saut&eacute;ed in extra virgin olive oil and garlic tapenade. (Optional spice: 0-5 stars)
 		  </div>
 		  <div class="span6 menu-row">
           <span class="num">6.</span><span class="fdname">Fish of the Day - $8.95</span><br>
-	        delectable slices of fish, pan seared thoroughly w/ extra virgin olive oil &amp; garlic tapenade (optional spice 1-5 stars)
+	        Delectable slices of fish, saut&eacute;ed in extra virgin olive oil and garlic tapenade. (Optional spice: 0-5 stars)
 		  </div>	
 		</li>
 		<li>
 		  <div class="span6 menu-row">
 		  	<span class="num">7.</span><span class="fdname">Tofu Delight - $8.50</span><br>
-	        where's the meat!? who cares, extra firm organic tofu cut into bite size pieces &amp; sauteed in extra virgin olive oil w/ our garlic tapenade (optional spice 1-5 stars) 
+	         Firm slices of organic tofu saut&eacute;ed in extra virgin olive oil and garlic tapenade. (Optional spice: 0-5 stars) 
 		  </div>
 		  <div class="span6 menu-row">
 		  	<span class="num">8.</span><span class="fdname">Paseo Press - $8.95</span><br>
-	        succulent morsels of roasted pork nestled atop banana peppers draped w/ sheer slices of smoked ham, swiss cheese, caramelized onions all melted together between a hot press (no lettauce or jalapenos) 
+	        <em class="alt-id">Formerly known as the Midnight Press.</em><br> Caribbean Roast pork, banana peppers, smoked ham and swiss cheese, melted together on a hot press. (No lettuce or jalapenos) 
 		  </div>	
 		</li>
 		<li>
 		  <div class="span6 menu-row">
 		    <span class="num">9.</span><span class="fdname">Ham and Cheese - $7.50</span><br>
-	        our twist on a classic. Razor thin slices of smoke cured ham, piled high over banana peppers, covered w/ caramelized onions &amp; swiss cheese, melted together on a hot press (no lettauce or jalapenos)
+	        Our twist on a classic. Slices of smoked ham, banana peppers, and swiss cheese, melted together on a hot press. (No lettuce or jalapenos)
 		  	</div>
 		  <div class="span6 menu-row">
         <span class="num">10.</span><span class="fdname">Onion Obsession - $6.00</span><br>
-	        caramelized onions sauteed in our garlic tapenade tossed with fresh sprigs of cilantro and jalapeno peppers (optional spice 1-5 stars)
+	        Caramelized onions piled high, saut&eacute;ed in extra virgin olive oil and garlic tapenade. (Optional spice: 0-5 stars)
 		  </div>	
 		</li>
 		<li>
 		  <div class="span6 menu-row">
 		  	<span class="num">11.</span><span class="fdname">Seared Scallops - $8.95</span><br>
-	        sizeable sea scallops pan seared in extra virgin olive oil, our garlic tapenade and tossed w/ fresh sprigs of cilantro (optional spice 1-5 stars)
+	        Wild scallops saut&eacute;ed in extra virgin olive oil and garlic tapenade. (Optional spice: 0-5 stars)
 		  </div>
 		</li>
 	</div><!--end of span12-->	
@@ -71,106 +72,123 @@
 		<li>
 		  <div class="span6 menu-row">
 		  	<span class="num">12.</span><span class="fdname">West Caribbean Bowl - $12.00</span><br>
-	        dis one be the second most popular "bowl" in the caribbean mon! a generous portion of jasmine rice smothered in black beans, warm salsa, shredded cheddar cheese, sour cream, jalapenos &amp; 1 chicken thigh. served w/ love, peace, and tortilla chips
+	        Dis' be the second most popular "bowl" in the Caribbean mon! Jasmine rice, black beans, warm salsa, cheddar cheese, sour cream, pickled jalapenos and a chicken thigh.  Served with tortilla chips.<br>
+	        <span class="alt-id"><em>Additional chicken thigh - $2.00</em></span>
 		  </div>
 		  <div class="span6 menu-row">
 		  	<span class="num">13.</span><span class="fdname">Rice Bean Thigh Trio - $8.00</span><br>
-	        two scoops of jasmine rice covered in black beans &amp; accompanied w/ an oven roasted thigh *extra thigh $2.00
+	        Two scoops of jasmine rice, a cup of black beans and a chicken thigh. <br><span class="alt-id"><em>Additional chicken thigh - $2.00</em></span>
 		  </div>	
 		</li>
 		<li>
 		  <div class="span6 menu-row">
-		  	<span class="num">14.</span><span class="fdname">Paseo Greens - $4.75</span><br>
-	        crisp romaine lettauce, razor thin sliced purple cabbage, julienne pickled beets, fresh sprigs of cilantro, drizzled w/ our house vinaigrette &amp; extra virgin oil *add grilled chicken breast--$3.00 *add sauteed prawns, scallops or fish--$4.00
-	        *roasted thigh &amp; caribbean roast--$2.00
+		  	<span class="num">14.</span><span class="fdname">Paseo Greens - $4.75</span><sup class="gf-vg"> GF / VG</sup><br>
+	        Romaine lettuce, purple cabbage, pickled beets, and fresh cilantro, drizzled with our house vinaigrette.<br><span class="alt-id"><em>Add chicken, pork, or tofu - $3.00<br> Add prawns, scallops, or fish - $4.00</em></span>
 		  </div>
 		  <div class="span6 menu-row">
-		  	<span class="num">15.</span><span class="fdname">Black Beans &amp; Rice - $5.50</span><br>
-	        a bowl full of fluffy jasmine rice smothered in our critically acclaimed vegetarian black beans
+		  	<span class="num">15.</span><span class="fdname">Black Beans and Rice - $5.50</span><sup class="gf-vg"> GF / VG</sup><br>
+	        A bowl full of fluffy jasmine rice smothered in our critically acclaimed vegetarian black beans.
 		  </div>	
 		</li>
 	    <li>
 		  <div class="span6 menu-row">
-		  	<span class="num">16.</span><span class="fdname">Rice Bean Salad - $8.25</span><br>
-	        paseo greens served with jasmine rice &amp; a healthy portion of black beans
+		  	<span class="num">16.</span><span class="fdname">Rice Beans and Salad - $8.25</span><sup class="gf-vg"> GF / VG</sup><br>
+	        Two scoops of jasmine rice, a cup of black beans and Paseo Greens.
 		  </div>
 		</li>
 	  </ul>
 	</div><!--end of span12-->	
 	<div class="menu-category span12">
-		<span class="food-title">Entrees</span>
-		<span class="description"><br><em>served all day w/ the following paseo greens drizzled with our house vinaigrette &amp; extra virgin olive oil. accompied w/ jasmine rice &amp; our critically acclaimed vegetarian black beans.</em><span>
+		<span class="food-title">Entr&eacute;es</span>
+		<span class="description"><br><em>All entr&eacute;es are served with jasmine rice, black beans, Paseo Greens and garlic corn. Available all day.</em><span>
 	</div>
 	<div class="span12 block">
 		<ul class="list-2s">
 			<li>
 		  	<div class="span6 menu-row">
-		  		<span class="num">17.</span><span class="fdname">1/2 Chicken Dinner - $12.50</span><br>
-					by far the best deal on the island for quality &amp; quantity. a huge 1/2 chicken encrusted w/ exotic spiced, flash grilled sealing all the juiced, finished off in the oven &amp; then by you.
+		  		<span class="num">17.</span><span class="fdname">Half Chicken Dinner - $12.50</span><br>
+					A huge half chicken oven roasted in Paseo Marinade.
 		  	</div>
 		  	<div class="span6 menu-row">
 					<span class="num">18.</span><span class="fdname">Caribbean Roast Dinner - $12.50</span><br>
-					hefty morsels of succulent roasted pork shoulder dripping in *paseo parinade waiting to tantalize al 9000 of your taste buds
+					<span class="alt-id"><em>Our entr&eacute;e form of the #2.</em></span><br>
+					Pork shoulder slow-roasted in Paseo Marinade until falling apart.
 		  	</div>	
 		  </li>
   		<li>
 		  	<div class="span6 menu-row">
-					<span class="num">19.</span><span class="fdname">Smokin' Thighs Dinner - $12.50</span><br>
-					2 bone-in juicy thighs bathed in *paseo marinade flash grilled giving 'em an enticing smokey savor then patiently roasted 'til flawless. can you hear the "thigh" of satisfaction?
+					<span class="num">19.</span><span class="fdname">Smokin' Thigh Dinner - $12.50</span><br>
+					Two bone-in chicken thighs oven roasted in Paseo Marinade.
 		  	</div>
 		  	<div class="span6 menu-row">
-					<span class="num">20.</span><span class="fdname">Grilled Chicken Breast - $13.00</span><br>
-					6oz of boneless, skinless, all white goodness, grilled over lava rocks with a caramelized coating of *paseo marinade embracing all its' natural juices
+					<span class="num">20.</span><span class="fdname">Chicken Breast Dinner - $13.00</span><br>
+					A boneless, skinless chicken breast grilled on a flat top and basted wih Paseo Marinade until golden brown.
 		  	</div>	
 		  </li>
 		  <li>
 		  	<div class="span6 menu-row">
-		  		<span class="num">21.</span><span class="fdname">Paseo Pork Loin - $13.00</span><br>
-					cubed pork loin grilled over an open flame, brushed with *paseo marinade &amp; greatness.
+		  		<span class="num">21.</span><span class="fdname">Pork Loin Dinner - $13.00</span><br>
+					Cubed pork loin grilled on a flat top and basted with Paseo Marinade until golden brown.
 		  	</div>
 		  	<div class="span6 menu-row">
-		  		<span class="num">22.</span><span class="fdname">Caribbean Scallops - $13.00</span>
-					savory sea scallops pan seared in extra virgin olive oil, garlic tapenade &amp; gently tossed in our reveled red sauce. Available w/ cilantro (optional spice 1-5 stars)
+		  		<span class="num">22.</span><span class="fdname">Caribbean Scallops Dinner - $13.00</span><sup class="gf-vg"> GF</sup><br> Wild scallops sautéed in extra virgin olive oil and our homemade red salsa. Available with cilantro. (Optional spice: 0-5 stars)
 		  	</div>	
 		  </li>
 		  <li>
 		  	<div class="span6 menu-row">
-					<span class="num">23.</span><span class="fdname">Fish In Red Sauce - $13.00</span><br>
-					delicate slices of fish fillet sauteed in extra virgin olive oil, garlic tapenade &amp; swimming in our reveled red sauce. available w/ cilantro (optional spice 1-5 stars)
+					<span class="num">23.</span><span class="fdname">Paseo Fish Dinner - $13.00</span><sup class="gf-vg"> GF</sup><br>
+					Fish of the day saut&eacute;ed in extra virgin olive oil and our homemade red salsa. Available with cilantro. (Optional spice: 0-5 stars)
 		  	</div>
 		  	<div class="span6 menu-row">
-					<span class="num">24.</span><span class="fdname">Paseo Prawns - $13.00</span><br>
-					6 peeled &amp; deveined black tiget prawns, sauteed in extra virgin olive oil, garlic tapenade &amp; simmered in our vivrant red sauce. available w/ cilantro (optional spice 1-5 stars)
+					<span class="num">24.</span><span class="fdname">Paseo Prawn Dinner - $13.00</span><sup class="gf-vg"> GF</sup><br>
+					Tiger prawns saut&eacute;ed in extra virgin olive oil and our homemade red salsa. Available with cilantro. (Optional spice: 0-5 stars)
 		  	</div>	
 		  </li>
 		  <li>
 		  	<div class="span6 menu-row">
-					<span class="num">25.</span><span class="fdname">Tofu Con Gusto - $12.50</span><br>
-					stout slices of extra firm organic tofu, sauteed in extra virgin olive oil, garlic tapenade &amp; ladled w/ our reveled red sauce. available w/ cilantro (optional spice 1-5 stars)
+					<span class="num">25.</span><span class="fdname">Tofu Con Gusto - $12.50</span><sup class="gf-vg"> GF / VG</sup><br>
+					Firm slices of organic tofu saut&eacute;ed in extra virgin olive oil and our homemade red salsa. Available with cilantro. (Optional spice: 0-5 stars)
 		  	</div>
+		  	<div class="span6 menu-row">
+		  		<span class="num">26.</span><span class="fdname">Batata Fritas - $10.50</span><br>Hand cut sweet potatos fried in grass-fed beef fat.  Free for BBBC members.
+
 		  </li>
 	</div><!--end of span12-->	  	
 	<div class="menu-category span12">
-		<span class="food-title">Sides</span>
+		<span class="food-title">Loners</span>
+		<span class="description"><br><em>All loners are served with a cup of Jasmine rice.</em><span>
 	</div>
 	<div class="span12 block">
-			<div class="side">grilled chicken breast with rice $5.75</div>
-		  <div class="side">paseo pork loin with rice - $5.75</div>
-			<div class="side">2 chicken thighs w/ rice - $5.25</div>
-			<div class="side">1/2 chicken w/ rice - $5.75</div>	
-		  <div class="side">caribbean roast pork w/ rice - $5.50</div>
-			<div class="side">your choice of prawns, scallops or fish in red sauce over rice - $6.25</div>
-  		<div class="side">tofu in red sauce over rice - $5.75</div>
-		  <div class="side">12oz black beans - $4.25</div>
-			<div class="side">6oz black beans - $3.00</div>
-			<div class="side">12oz jasmine rice - $2.50</div>
-			<div class="side">6oz jasmine rice - $1.50</div>
-			<div class="side">caramelized onions - $1.00</div>
-			<div class="side">tortilla chips - $1.25</div>	
-			<div class="side">jalapenos - $0.50</div>	
-			<div class="side">can soda or water - $1.25</div>	
-			<div class="side">specialty soda - $1.00</div>	
+			<div class="side">Grilled Chicken Breast - $5.75</div>
+		  <div class="side">Paseo Pork Loin - $5.75</div>
+			<div class="side">Two Chicken Thighs - $5.25</div>
+			<div class="side">Paseo Half Chicken - $5.75</div>	
+		  <div class="side">Caribbean Roast pork - $5.50</div>
+			<div class="side">Prawns in Red Sauce - $6.25</div>
+			<div class="side">Scallops in Red Sauce - $6.25</div>
+			<div class="side">Fish in Red Sauce - $6.25</div>
+  		<div class="side">Tofu in Red Sauce - $5.75</div>
+		  
+			<div class="menu-category span12">
+			<span class="food-title">Sides</span>
+			</div>
+		  <div class="side">6oz / 12oz black beans - $3.00 / 4.25</div>
+			<div class="side">6oz / 12oz Jasmine rice - $1.50 / 2.50</div>
+			<div class="side">6oz Caramelized Onions - $1.00</div>
+			<div class="side">Corn - $1.00</div>
+			<div class="side">Tortilla Chips - $1.25</div>	
+			<div class="side">Salsa (optional spice: 0-5 stars) - $0.95</div>
+			<div class="side">Signature aoli - $0.95</div>
+			<div class="side">Habanero oil - $0.50</div>
+			<div class="side">Jalapenos - $0.50</div>	
+			<div class="side">Can Soda or Water - $1.25</div>	
+	</div>
+	<div class="span12 key-food">
+		GF: Gluten-Free<br>
+		VG: Vegetarian<br>
+		<span class="alt-id">All menu items are subject to cross-contamination and therefore are not guaranteed to be allergen-free.</span>
 	</div>	
+
 </div>
 	
 	
