--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -16,15 +16,11 @@ body {
 }
 
 #backdrop {
-  background: url(image_path('paseo1.jpg')) no-repeat center center fixed;
+  background: url(image_path('paseo12.jpg')) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   width: 100%;
-}
-
-.main-page  {
-  
 }
 
 .text-box{
@@ -93,7 +89,7 @@ footer.footer li{
   border-bottom-width: 2px;
   border-top-width:2px;
   border-color: #0fe9f7;
-  padding-bottom:5px;
+  padding-bottom:8px;
   padding-top: 8px;
 }
 
@@ -104,7 +100,7 @@ footer.footer li{
 }
 
 .description  {
-  font-size: 1.2em;
+  font-size: 1.1em;
   color: #660000;
 }
 
@@ -123,10 +119,9 @@ ul.list-2s {
   }
 }
 
-
 .fdname  {
   font-size: 16px;
-  margin-left: 5px;
+  margin-left: 7px;
   color: #660000;
   font-weight: bold;
 }
@@ -137,6 +132,10 @@ ul.list-2s {
   font-weight: bold;
 }
 
+.gf-vg  {
+  color: #660000;
+}
+
 .side  {
   color: #660000;
   font-size: 15px;
@@ -144,6 +143,23 @@ ul.list-2s {
   padding-bottom: 5px;
 }
 
+#fix3-4  {
+  width: 100%
+}
+
+.alt-id  {
+  color: #660000;
+  font-size: 12px;
+}
+
+.key-food  {
+  margin-top: 24px;
+  border-top: solid;
+  border-bottom: solid;
+  border-color: #0fe9f7;
+  border-top-width: 2px;
+  border-bottom-width: 2px;
+}
 
 /* Typography */
 h1 {
