--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,30 +7,22 @@
   <%= csrf_meta_tags %>
   <%= render 'layouts/shim' %>
   <meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0" />
- 
-
-    <div id="fb-root"></div>
-    <script>(function(d, s, id) {
-      var js, fjs = d.getElementsByTagName(s)[0];
-      if (d.getElementById(id)) return;
-      js = d.createElement(s); js.id = id;
-      js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
-      fjs.parentNode.insertBefore(js, fjs);
-      }(document, 'script', 'facebook-jssdk'));
-    </script>
 </head>
 <body>
   <%= render 'layouts/header' %>
   <div class = "container" id="backdrop">  
     <div class="container main-page">
       <div class="row-fluid"> 
-        <div class="span9 text-box" id="content">       
+        <div class="span12 text-box" id="content">       
           <%= yield %>
         </div> <!--end of span8-->
-        <div class="span3 text-box connect-bar">
+      </div>
+      <div class="row-fluid">  
+        <div class="span12 text-box connect-bar">
           <%= render 'layouts/connect' %>
-        </div>  
-    </div>
+        </div>
+
+      </div>
    </div>
    <%= render 'layouts/footer' %>
   </div>     
