--- a/app/views/static_pages/menu2.html.erb
+++ b/app/views/static_pages/menu2.html.erb
@@ -7,64 +7,73 @@
 	    <br><em>All sandwiches are served on a toasted baguette, slathered with our signature aoli, fresh cilantro, pickled jalapenos, romaine lettuce and caramelized onions. Add garlic corn for $1.00</em></span>
 	</div> 
 	<div class="span12 block">
-		<div class="span6 menu-column">
-			<div class="menu-item">
-			<span class="num">1.</span><span class="fdname">Grilled Pork - $8.50</span><br>
+	  <ul class="list-2s">
+	    <li id="fix3-4">
+		  <div class="span6 menu-row">
+		  <span class="num">1.</span><span class="fdname">Grilled Pork - $8.50</span><br>
 		  Cubed pork loin grilled on a flat top and basted with Paseo Marinade until golden brown.
 		  </div>
-		  <div class="menu-item">
-		  	<span class="num">2.</span><span class="fdname">Caribbean Roast - $8.50</span><br>
-		 		<span class="alt-id"><em>Most Popular - Formerly known as the Midnight Cuban.</em></span><br>
-		 		Pork shoulder slow-roasted in Paseo Marinade until falling apart.
-			</div>
-			<div class="menu-item">
-				<span class="num">3.</span><span class="fdname">Chicken Breast - $8.50</span><br>
-      	Boneless, skinless chicken breast grilled on a flat top and basted with Paseo Marinade until golden brown.
-      </div>  
-      <div class="menu-item">
-      	<span class="num">4.</span><span class="fdname">Smokin' Thighs - $8.50</span><br>
-				Two marinated, de-boned, skin-on chicken thighs, flash grilled and oven roasted.
-			</div>
-			<div class="menu-item">
-				<span class="num">5.</span><span class="fdname">Sauteed Prawns - $8.95</span><br>
-				Tiger prawns saut&eacute;ed in extra virgin olive oil and garlic tapenade. (Optional spice: 0-5 stars)
+		  <div class="span6 menu-row">
+		  <span class="num">2.</span><span class="fdname">Caribbean Roast - $8.50</span><br>
+		  <span class="alt-id"><em>Most Popular - Formerly known as the Midnight Cuban.</em></span><br>
+		  Pork shoulder slow-roasted in Paseo Marinade until falling apart.
 		  </div>
-			<div class="menu-item">
-				<span class="num">6.</span><span class="fdname">Fish of the Day - $8.95</span><br>
-	    	Delectable slices of fish, saut&eacute;ed in extra virgin olive oil and garlic tapenade. (Optional spice: 0-5 stars)
-	  	</div>
-	  </div>		
-		<!--end of column-->
-		<div class="span6 menu-column">
-			<div class="menu-item">
-				<span class="num">7.</span><span class="fdname">Tofu Delight - $8.50</span><br>
-	      Firm slices of organic tofu saut&eacute;ed in extra virgin olive oil and garlic tapenade. (Optional spice: 0-5 stars)
-	    </div>
-			<div class="menu-item">
-				<span class="num">8.</span><span class="fdname">Paseo Press - $8.95</span><br>
-	      <em class="alt-id">Formerly known as the Midnight Press.</em><br> Caribbean Roast pork, banana peppers, smoked ham and swiss cheese, melted together on a hot press. (No lettuce or jalapenos)
-	    </div>
-	    <div class="menu-item">
-	    	<span class="num">9.</span><span class="fdname">Ham and Cheese - $7.50</span><br>
-	      Our twist on a classic. Slices of smoked ham, banana peppers, and swiss cheese, melted together on a hot press. (No lettuce or jalapenos)
-	    </div>   
-			<div class="menu-item">
-				<span class="num">10.</span><span class="fdname">Onion Obsession - $6.00</span><br>
-	      Caramelized onions piled high, saut&eacute;ed in extra virgin olive oil and garlic tapenade. (Optional spice: 0-5 stars)
-	    </div>
-			<div class="menu-item">
-				<span class="num">11.</span><span class="fdname">Seared Scallops - $8.95</span><br>
-	      Wild scallops saut&eacute;ed in extra virgin olive oil and garlic tapenade. (Optional spice: 0-5 stars)
-	    </div>  
-		</div>
-		<!--end of column-->	
+		</li>	
+		<li id="fix3-4">
+		  <div class="span6 menu-row">
+		   <span class="num">3.</span><span class="fdname">Chicken Breast - $8.50</span><br>
+           Boneless, skinless chicken breast grilled on a flat top and basted with Paseo Marinade until golden brown.
+		  </div>
+		  <div class="span6 menu-row">
+			<span class="num">4.</span><span class="fdname">Smokin' Thighs - $8.50</span><br>
+			Two marinated, de-boned, skin-on chicken thighs, flash grilled and oven roasted.
+		  </div>	
+		</li>
+		<li>
+		  <div class="span6 menu-row">
+			<span class="num">5.</span><span class="fdname">Sauteed Prawns - $8.95</span><br>
+			Tiger prawns saut&eacute;ed in extra virgin olive oil and garlic tapenade. (Optional spice: 0-5 stars)
+		  </div>
+		  <div class="span6 menu-row">
+          <span class="num">6.</span><span class="fdname">Fish of the Day - $8.95</span><br>
+	        Delectable slices of fish, saut&eacute;ed in extra virgin olive oil and garlic tapenade. (Optional spice: 0-5 stars)
+		  </div>	
+		</li>
+		<li>
+		  <div class="span6 menu-row">
+		  	<span class="num">7.</span><span class="fdname">Tofu Delight - $8.50</span><br>
+	         Firm slices of organic tofu saut&eacute;ed in extra virgin olive oil and garlic tapenade. (Optional spice: 0-5 stars) 
+		  </div>
+		  <div class="span6 menu-row">
+		  	<span class="num">8.</span><span class="fdname">Paseo Press - $8.95</span><br>
+	        <em class="alt-id">Formerly known as the Midnight Press.</em><br> Caribbean Roast pork, banana peppers, smoked ham and swiss cheese, melted together on a hot press. (No lettuce or jalapenos) 
+		  </div>	
+		</li>
+		<li>
+		  <div class="span6 menu-row">
+		    <span class="num">9.</span><span class="fdname">Ham and Cheese - $7.50</span><br>
+	        Our twist on a classic. Slices of smoked ham, banana peppers, and swiss cheese, melted together on a hot press. (No lettuce or jalapenos)
+		  	</div>
+		  <div class="span6 menu-row">
+        <span class="num">10.</span><span class="fdname">Onion Obsession - $6.00</span><br>
+	        Caramelized onions piled high, saut&eacute;ed in extra virgin olive oil and garlic tapenade. (Optional spice: 0-5 stars)
+		  </div>	
+		</li>
+		<li>
+		  <div class="span6 menu-row">
+		  	<span class="num">11.</span><span class="fdname">Seared Scallops - $8.95</span><br>
+	        Wild scallops saut&eacute;ed in extra virgin olive oil and garlic tapenade. (Optional spice: 0-5 stars)
+		  </div>
+		</li>
+	</div><!--end of span12-->	
 	<div class="menu-category span12"><span class="food-title">The Goods</span></div>
 	<div class="span12 block">
-		<div class="span6 menu-column">
-			<ul>
-				<li><span class="num">12.</span><spanclass="fdname">West Caribbean Bowl - $12.00</span><br>
-	      Dis' be the second most popular "bowl" in the Caribbean mon! Jasmine rice, black beans, warm salsa, cheddar cheese, sour cream, pickled jalapenos and a chicken thigh.  Served with tortilla chips.<br><span class="alt-id"><em>Additional chicken thigh - $2.00</em></span>
-	    	</li>
+	  <ul class="list-2s">	
+		<li>
+		  <div class="span6 menu-row">
+		  	<span class="num">12.</span><span class="fdname">West Caribbean Bowl - $12.00</span><br>
+	        Dis' be the second most popular "bowl" in the Caribbean mon! Jasmine rice, black beans, warm salsa, cheddar cheese, sour cream, pickled jalapenos and a chicken thigh.  Served with tortilla chips.<br>
+	        <span class="alt-id"><em>Additional chicken thigh - $2.00</em></span>
 		  </div>
 		  <div class="span6 menu-row">
 		  	<span class="num">13.</span><span class="fdname">Rice Bean Thigh Trio - $8.00</span><br>
